# keep-wimesh-alive-pls

./: .gitignore  Cargo.toml  README  config.example.toml  install.sh  run.sh  service.sh  uninstall.sh  wimesh.service.template
src/: config.rs  http.rs  main.rs  models.rs  parser.rs  utils.rs
src/portal/: awing.rs  mod.rs
