[package]
name = "wimesh"
version = "0.1.0"
edition = "2021"
description = "Auto-login client for Wi-MESH captive portals"
authors = ["sotsuba"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["cookies", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parsing
regex = "1"

# Async trait support
async-trait = "0.1"
urlencoding = "2.1.3"

# Configuration
config = "0.14"
toml = "0.8"
dirs = "5"

# CLI
clap = { version = "4", features = ["derive"] }



[profile.release]
opt-level = 3
lto = true
strip = true
